# 0.2.4

- Removed some TODOs
- Added hammer of reckoning setting

# 0.2.3

- Disabled some skills on open world and battlegrounds because they cause too much lag, they will be used within arena but elsewhere only on self
- Reenabled Totem Stomp
- Check for passive pvp talent and increase hammer of justice range in checks
- Fixed a bug within blessing of sanctuary

# 0.2.2

- Rewordked caching of all unit caches to be alot faster
- Fixed consecration and divine hammer pre checks
- Added Talent Cache which refreshes on talent change
- Only pulse heal ones per rotation

# 0.2.1

- Divine Storm will now check for Players around in PvP to ignore pets
- Update notice will now longer popup a message box
- Interrupt Button is now working as he should

# 0.2.0

- Initial Version with working Retribution Spec