@@ -8,7 +8,7 @@ namespace Paladin.SpellBooks.Specs.Retribution
         {
             if (!Global.BlindingLight.Check(BlindingLight, MyTalents.BlindingLight)) return false;
 
-            if (!await BlindingLight.Cast()) return false;
+            if (!await BlindingLight.Cast(Styx.StyxWoW.Me)) return false;
 
             LastSpell = BlindingLight;
             return true;
