@@ -10,7 +10,7 @@ namespace Paladin.SpellBooks.Specs.Retribution
             if (WakeOfAshes.CRSpell.Cooldown) return false;
             if (!Globals.CurrentTarget.IsWithinMeleeRange || !Styx.StyxWoW.Me.IsFacing(Globals.CurrentTarget) || !Globals.CurrentTarget.Attackable) return false;
             
-            if (!await WakeOfAshes.Cast()) return false;
+            if (!await WakeOfAshes.Cast(Styx.StyxWoW.Me)) return false;
 
             LastSpell = WakeOfAshes;
             return true;
