@@ -2,6 +2,8 @@
 
 - Removed some TODOs
 - Added hammer of reckoning setting
+- Added cast on self for several spells
+- Added divine steed hotkey
 
 # 0.2.3
 
